# jpd

./: .gitignore  .pre-commit-config.yaml  README.md  _jpd.py  ipython-startup  json-pd  pyproject.toml  requirements.txt  setup.cfg
jpd/: __init__.py  cmd.py  config.py  const.py  dq.py  logging.py  misc.py  query.py
mypd/: __init__.py  config.py  const.py  dq.py  misc.py  query.py  raw.py
t/: conftest.py  test_config.py  test_misc.py
t/data/: gandalf.yaml  milk.yaml
